<resources>
    <string name="com.crashlytics.android.build_id">58c8f26c-fe6d-4477-b0e6-7897199766b7</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="app_name">REBUS</string>
    <string name="banner_ad_unit_id">ca-app-pub-6749547745194941/2944362515</string>
    <string name="button_100000_coins">100000 Coins</string>
    <string name="button_100000_coins_price">3.99</string>
    <string name="button_10000_coins">10000 Coins</string>
    <string name="button_10000_coins_price">1.99</string>
    <string name="button_30000_coins">30000 Coins</string>
    <string name="button_30000_coins_price">2.99</string>
    <string name="button_3000_coins">3000 Coins</string>
    <string name="button_3000_coins_price">0.99</string>
    <string name="button_achievements">Achievements</string>
    <string name="button_amazon_gamecircle">Amazon GameCircle Logout</string>
    <string name="button_amazon_login">Amazon GameCircle Login</string>
    <string name="button_answer">Answer</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_free">Free</string>
    <string name="button_free_coins">2000 Coins</string>
    <string name="button_get_free_coins">Get Free Coins</string>
    <string name="button_google_play_games">Google Play Games</string>
    <string name="button_gplus_login">Login to Google Play</string>
    <string name="button_gplus_logout">Logout Google Play</string>
    <string name="button_how_to_play">How to play</string>
    <string name="button_info">Info</string>
    <string name="button_later">Later</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="button_like">Like</string>
    <string name="button_like_coins">1000 Coins</string>
    <string name="button_megapack_price">4.99</string>
    <string name="button_no">No</string>
    <string name="button_not_now">Not now</string>
    <string name="button_ok">Ok</string>
    <string name="button_open_levels">Open Levels</string>
    <string name="button_open_levels_price">2.99</string>
    <string name="button_rate">Rate</string>
    <string name="button_remove_ads">Remove Ads</string>
    <string name="button_remove_ads_price">0.99</string>
    <string name="button_reset">Reset</string>
    <string name="button_restore_purchases">Restore purchases</string>
    <string name="button_send">Send</string>
    <string name="button_sound_off">Sound Off</string>
    <string name="button_sound_on">Sound On</string>
    <string name="button_statistic">Statistic</string>
    <string name="button_store">Store</string>
    <string name="button_yes">Yes</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="game_services_app_id">653379448217</string>
    <string name="hint_your_email">Your email</string>
    <string name="hint_your_name">Your name</string>
    <string name="label_3_letters">3 letters</string>
    <string name="label_4_letters">4 letters</string>
    <string name="label_coins">coins</string>
    <string name="label_copyright">"©2015 Jutiful Ltd.
Rebus. All Rights Reserved.
www.jutiful.com"</string>
    <string name="label_score">score</string>
    <string name="label_stats_correct_answers">Correct answers</string>
    <string name="label_stats_hints_used">Hints used</string>
    <string name="label_stats_number_of_attempts">Number of attempts</string>
    <string name="label_stats_rebuses_solved">Rebuses solved</string>
    <string name="label_stats_score">Score</string>
    <string name="label_stats_total_coins">Total coins</string>
    <string name="label_stats_total_time_played">Total time played</string>
    <string name="label_x_letters_template">%d letters</string>
    <string name="lib_name">Unity Ads</string>
    <string name="message_1000_promo">"You’ve updated REBUS
 and in gratitude get
 1000 coins"</string>
    <string name="message_buy_coins">You do not have enough coins. do you want to buy coins?</string>
    <string name="message_connect_to_amazon_store">Do you want to connect to Amazon GameCircle?</string>
    <string name="message_connect_to_play_store">Do you want to connect to Google Play Services?</string>
    <string name="message_extra_pack_available">"YOU'VE SOLVED MANY REBUSES AND NOW YOU HAVE THE OPTION OF BUYING EXTRA LEVELS!"</string>
    <string name="message_free_coins">Do you want to get FREE coins, using the promotional offer?</string>
    <string name="message_free_coins_received">"You've got 2000 points"</string>
    <string name="message_got_coins_template">"You've got %d coins"</string>
    <string name="message_help_1">Get the answer</string>
    <string name="message_help_2">Remove all incorrect letters</string>
    <string name="message_help_3">Find out the number of letters and one of them</string>
    <string name="message_help_4">Find out the number of letters</string>
    <string name="message_invalid_name_email">Please enter your name and a valid email address</string>
    <string name="message_learn_how_to_play">Learn how to play?</string>
    <string name="message_not_implemented">Not implemented</string>
    <string name="message_only_correct">Only correct letters are now displayed on the keyboard</string>
    <string name="message_register">"Subscribe &amp; get free
2000 coins"</string>
    <string name="message_registration_completed">Please complete the e-mail verification, and the coins will be added</string>
    <string name="message_registration_failed">Registration failed</string>
    <string name="message_reset_confirmation">You are sure that you want to reset all the statistics?</string>
    <string name="message_reset_confirmation_two">All achievements and coins will be reset, including earned and purchased coins. Are you sure you want to reset all the statistics of the game?</string>
    <string name="message_reset_done">All statistics reset</string>
    <string name="message_reset_rejected">"You've recently used RESET, so you can't use this feature now. Please try again later."</string>
    <string name="message_review">Please rate us in the Play Store, and inspire us to keep adding new rebuses to challenge your brain power!</string>
    <string name="message_review_amazon">Please rate us in the Amazon Appstore, and inspire us to keep adding new rebuses to challenge your brain power!</string>
    <string name="message_subscribe">I agree to receive news and updates from Jutiful</string>
    <string name="motivated_unit_id">ca-app-pub-6749547745194941/5897828915</string>
    <string name="not_motivated_unit_id">ca-app-pub-6749547745194941/4421095719</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="template_cost">%d coins</string>
    <string name="template_stats_the_easiest_rebus" formatted="false">The easiest rebus - %02d:%02d:%02d</string>
    <string name="template_stats_the_most_difficult_rebus" formatted="false">The hardest rebus - %02d:%02d:%02d</string>
    <string name="template_time" formatted="false">%02d:%02d:%02d</string>
    <string name="text_share_1">I lost my peace until I guessed the answer. Could you try it?</string>
    <string name="title_subscribe">Subscribe to Jutiful</string>
</resources>