<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/bg" android:scaleType="centerCrop" />
    <include android:id="@id/toolbar" layout="@layout/layout_toolbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/toolbar">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingTop="@dimen/settings_top" android:paddingBottom="32.0dip" android:layout_width="@dimen/level_width" android:layout_height="wrap_content">
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonHowTo" android:background="@color/bg_settings_1" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_how_to_play" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonStatistic" android:background="@color/bg_settings_2" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_statistic" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonReset" android:background="@color/bg_settings_3" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_reset" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonSoundOnOff" android:background="@color/bg_settings_4" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_sound_on" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonStore" android:background="@color/bg_settings_5" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_store" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonInfo" android:background="@color/bg_settings_6" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_info" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonRate" android:background="@color/bg_settings_7" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_rate" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonLeaderboards" android:background="@color/bg_settings_8" android:paddingLeft="20.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_leaderboard" android:drawableRight="@drawable/games_leaderboards" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonAchievements" android:background="@color/bg_settings_9" android:paddingLeft="20.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_achievements" android:drawableRight="@drawable/games_achievements" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonAmazonSignin" android:background="@color/bg_settings_9" android:paddingLeft="20.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_amazon_login" />
            <com.jutiful.rebus.utils.SAutoBgButton android:textSize="18.0dip" android:gravity="start|center" android:id="@id/buttonGplus" android:background="@color/bg_settings_10" android:paddingLeft="20.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip" android:text="@string/button_gplus_login" android:drawableRight="@drawable/games_controller" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>